# book2mp3-audiobook-studio

./: .gitignore  Der Weg der Liebe - Nico Robin.epub  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  start.bat  start.sh
docs/: _config.yml  anforderungen-book2mp3-v1.md  architecture.md  github-pages.md  index.md  next-agent.md  open-source-compliance.md  portable-distribution.md  project-description.md  quickstart-first-audiobook.md  quickstart-portable.md  quickstart-source.md  release-checklist.md  roadmap.md  user-guide.md  voice-strategy.md
ebooksp/: EbookWav2Mp3.py  Mp3WavKomplex.py  ebookspliter.py  textremover.py
scripts/: bootstrap_runtime.py  build_linux_portable_release.py  build_portable_bundle.py  build_windows_portable_release.py  capture_docs_screenshots.py  check_portable_bundle.py  check_xtts_cuda.py  import_xtts_webui_speakers.py  install_windows_bundle_packages.py  install_windows_embeddable.py  install_xtts_into_bundle_python.py  install_xtts_linux_standalone_python.py  install_xtts_starter_profiles.py  perf_report.py  populate_bundle_python_linux.py  populate_bundle_python_windows.py  render_xtts_dialogue_example.py  render_xtts_name_passage_example.py  repair_completed_chapter_jobs.py  setup_xtts_runtime.py  smoke_blocked_reset.py  smoke_bulk_import_and_eta.py  smoke_bundle_build.py  smoke_chapter_export.py  smoke_cli_flow.py  smoke_custom_piper_import.py  smoke_i18n_metadata_finished_books.py  smoke_jobs_and_benchmark_workflow.py  smoke_laptop_layout.py  smoke_linux_release_build.py  smoke_local_api.py  smoke_pdf_chapter_analysis.py  (+41 more)
(+57 files in other folders)
